--- a/polybar/theme/1/config
+++ b/polybar/theme/1/config
@@ -128,6 +128,7 @@ label-urgent-padding = ${module/bspwm.label-urgent-padding}
 
 ws-icon-0 = 1;
 ws-icon-1 = 1;
+enable-click = true
 
 [module/mpd]
 type = internal/mpd
