--- a/i3/config
+++ b/i3/config
@@ -27,7 +27,7 @@ exec_always --no-startup-id feh --bg-scale ~/.config/wall.png
 exec_always			exec bash ~/.config/polybar/launch.sh
 # exec_always 			    exec setxkbmap -option 
 exec_always                 exec --no=startup-id setxkbmap -option && xmodmap ~/.config/.Xmodmap
-bindsym $mod1+z             exec setxkbmap -option && xmodmap ~/.config/.Xmodmap
+bindsym $mod+z             exec setxkbmap -option && xmodmap ~/.config/.Xmodmap
 bindsym $mod1+x             exec setxkbmap -option && xmodmap ~/.config/xmodmap/wasd.Xmodmap
 
 bindsym $mod1+Shift+x       exec setxkbmap -option
@@ -134,10 +134,10 @@ bindsym $mod+F10	exec --no-startup-id sudo bash ~/.config/i3/unmount.sh
 #bindsym $mod+F12
 
 #Arrow Keys
-bindsym $mod+Left	focus left
-bindsym $mod+Down	focus down
-bindsym $mod+Up		focus up
-bindsym $mod+Right 	focus right
+# bindsym $mod+Left	focus left
+# bindsym $mod+Down	focus down
+# bindsym $mod+Up		focus up
+# bindsym $mod+Right 	focus right
 bindsym $mod+Shift+Left	move left
 bindsym $mod+Shift+Down	move down
 bindsym $mod+Shift+Up	move up
@@ -167,7 +167,7 @@ bindsym $mod+6		workspace $ws6
 bindsym $mod+7		workspace $ws7
 bindsym $mod+8		workspace $ws8
 bindsym $mod+9		workspace $ws9
-bindsym $mod+0		workspace $ws10
+# bindsym $mod+0		workspace $ws10
 
 # move focused container to workspace
 bindsym $mod+Shift+1	move container to workspace $ws1
@@ -194,13 +194,13 @@ bindsym XF86AudioStop		exec --no-startup-id mocp -G
 
 # Pulse Audio controls
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
-bindsym $mod1+Right exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
-bindsym $mod1+equal exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
+bindsym $mod+Right exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
+bindsym $mod+equal exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
-bindsym $mod1+minus exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
-bindsym $mod1+Left exec --no-startup-id pactl set-sink-volume 0 -5% 
+bindsym $mod+minus exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
+bindsym $mod+Left exec --no-startup-id pactl set-sink-volume 0 -5% 
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
-bindsym $mod1+0 exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
+bindsym $mod+0 exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
 
 # Sreen brightness controls
 bindsym XF86MonBrightnessUp exec xbacklight -inc 20 # increase screen brightness
@@ -224,13 +224,11 @@ bindsym $mod+Control+j exec xrandr --output LVDS1 --rotate inverted; exec i3-msg
 
 bindsym $mod+Control+p xrandr --output VGA1 --mode 1024x768 --same-as LVDS1
 bindsym Print 		     exec scrot -e 'cp $f ~/Pictures/output.png && mv $f ~/Pictures'
-bindsym $mod+Print 	   exec --no-startup-id scrot -e -d 2 ~/Pictures/output.png
-bindsym $mod1+Print 	   exec --no-startup-id scrot -e -d 2 ~/Pictures/output.png
+bindsym $mod+Print 	     exec --no-startup-id sleep 2s;scrot -s -e 'cp $f ~/Pictures/output.png && mv $f ~/Pictures'
+bindsym $mod1+Print 	     bash ~/.config/i3/print_2s.sh
 
-# bindsym $mod+Print 	   exec scrot -s -d 5 'cp $f ~/Pictures/output.png && cp $f ~/Pictures'
-# bindsym $mod4+Print 	 exec scrot -s -d 2 'cp $f ~/Pictures/output.png && cp $f ~/Pictures'
+# bindsym $mod1+Print           exec scrot -s -d 2 -e 'cp $f ~/Pictures/output.png && mv $f ~/Pictures'
 
-# bindsym $mod+Print 	exec scrot -s -e 'cp $f ~/Pictures/output.png && mv $f ~/windows'
 
 mode "M" {
 # mouse speed require xdotool
